results/SVCOMP/4-shot/log-Class_method1-2024_03_18_13_52_54.txt
public class Class_method1 {
  //@ requires c != null;
  //@ requires b == true;
  //@ ensures \result == true;
  public static boolean fun() {
    return f(String.class, true);
  }

  //@ requires c != null;
  //@ requires b == true;
  //@ ensures \result == true;
  public static boolean f(Class c, boolean b) {
    return b;
  }
}
/home/max/Documents/JMLGPT/tmp/Class_method1.java:2: error: cannot find symbol
  //@ requires c != null;
               ^
  symbol:   variable c
  location: class Class_method1
/home/max/Documents/JMLGPT/tmp/Class_method1.java:3: error: cannot find symbol
  //@ requires b == true;
               ^
  symbol:   variable b
  location: class Class_method1
2 errors

